--- a/pacotes/frontend/src/App.css
+++ b/pacotes/frontend/src/App.css
@@ -1,73 +1,229 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  .container {
-    background: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-  }
-  h1 {
-    text-align: center;
-  }
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-  li {
-    background: #f9f9f9;
-    margin: 5px 0;
-    padding: 10px;
-    border-radius: 3px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  button {
-    background: #ff6347;
-    border: none;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  button:hover {
-    background: #ff4500;
-  }
-  input[type="text"] {
-    width: calc(100% - 22px);
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  .center-content {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    text-align: center;
-    padding: 5px;
-  }
-  .login-form {
-    display: flex;
-    flex-direction: column;
-    margin: 20px auto;
-  }
-  .login-form input {
-    margin-bottom: 10px;
-    width: 70%;
-    align-self: center;
-  }
-  .login-form button {
-    margin-top: 10px;
-    width: 25%;
-    align-self: center;
-  }
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.containers {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 300px;
+}
+h1 {
+  text-align: center;
+}
+ul {
+  list-style: none;
+  padding: 0;
+}
+li {
+  background: #f9f9f9;
+  margin: 5px 0;
+  padding: 10px;
+  border-radius: 3px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+button {
+  background: #ff6347;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+button:hover {
+  background: #ff4500;
+}
+input[type="text"] {
+  width: calc(100% - 22px);
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+.center-content {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  text-align: center;
+  padding: 5px;
+}
+.login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto;
+}
+.login-form input {
+  margin-bottom: 10px;
+  width: 70%;
+  align-self: center;
+}
+.login-form button {
+  margin-top: 10px;
+  width: 25%;
+  align-self: center;
+}
+
+/* LoginForm Styles */
+.container {
+  width: 100%;
+  max-width: 350px;
+  background: linear-gradient(
+    0deg,
+    rgb(255, 255, 255) 0%,
+    rgb(244, 247, 251) 100%
+  );
+  border-radius: 30px;
+  padding: 25px 35px;
+  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.1);
+  border: none;
+}
+
+.heading {
+text-align: center;
+font-weight: 900;
+font-size: 30px;
+color: rgb(16, 137, 211);
+}
+
+.form {
+margin-top: 20px;
+}
+
+.form .input {
+width: 85%;
+background: white;
+border: none;
+padding: 15px 20px;
+border-radius: 20px;
+margin-top: 15px;
+box-shadow: #cff0ff 0px 10px 10px -5px;
+border-inline: 2px solid transparent;
+}
+
+.form .input::-moz-placeholder {
+color: rgb(170, 170, 170);
+}
+
+.form .input::placeholder {
+color: rgb(170, 170, 170);
+}
+
+.form .input:focus {
+outline: none;
+border-inline: 2px solid #12b1d1;
+}
+
+.form .forgot-password {
+display: block;
+margin-top: 10px;
+margin-left: 10px;
+}
+
+.form .forgot-password a {
+font-size: 11px;
+color: #0099ff;
+text-decoration: none;
+}
+
+.form .login-button {
+display: block;
+width: 100%;
+font-weight: bold;
+background: linear-gradient(
+  45deg,
+  rgb(16, 137, 211) 0%,
+  rgb(18, 177, 209) 100%
+);
+color: white;
+padding-block: 15px;
+margin: 20px auto;
+border-radius: 20px;
+box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 20px 10px -15px;
+border: none;
+transition: all 0.2s ease-in-out;
+cursor: pointer;
+}
+
+.form .login-button:hover {
+transform: scale(1.03);
+box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 23px 10px -20px;
+}
+
+.form .login-button:active {
+transform: scale(0.95);
+box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 15px 10px -10px;
+}
+
+.social-account-container {
+margin-top: 25px;
+}
+
+.social-account-container .title {
+display: block;
+text-align: center;
+font-size: 10px;
+color: rgb(170, 170, 170);
+}
+
+.social-account-container .social-accounts {
+width: 100%;
+display: flex;
+justify-content: center;
+gap: 15px;
+margin-top: 5px;
+}
+
+.social-account-container .social-accounts .social-button {
+background: linear-gradient(45deg, rgb(0, 0, 0) 0%, rgb(112, 112, 112) 100%);
+border: 5px solid white;
+padding: 5px;
+border-radius: 50%;
+width: 40px;
+aspect-ratio: 1;
+display: grid;
+place-content: center;
+box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 12px 10px -8px;
+transition: all 0.2s ease-in-out;
+cursor: pointer;
+}
+
+.social-account-container .social-accounts .social-button .svg {
+fill: white;
+margin: auto;
+}
+
+.social-account-container .social-accounts .social-button:hover {
+transform: scale(1.2);
+}
+
+.social-account-container .social-accounts .social-button:active {
+transform: scale(0.9);
+}
+
+.agreement {
+display: block;
+text-align: center;
+margin-top: 15px;
+}
+
+.agreement a {
+text-decoration: none;
+color: #0099ff;
+font-size: 9px;
+}
+
+.error-message {
+color: #ff6b6b;
+font-size: 0.9em;
+text-align: center;
+margin-bottom: 10px;
+}
