--- a/pacotes/frontend/src/App.css
+++ b/pacotes/frontend/src/App.css
@@ -76,6 +76,7 @@ input[type="text"] {
   padding: 25px 35px;
   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.1);
   border: none;
+  margin-top: 200px;
 }
 
 .heading {
